Fri Jun  5 13:52:25 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * cuts/arch/ccm/CCM_Servant_T.h:
        * cuts/arch/ccm/CCM_Servant_T.inl:
        * cuts/arch/tcpip/ccm/TCPIP_CCM_Servant_T.h:
        * cuts/arch/tcpip/ccm/TCPIP_CCM_Servant_T.inl:
        * cuts/arch/tcpip/ccm/TCPIP_CCM_Servant_T.cpp:
        * examples/arch/tcpip/HelloWorld/TCPIP_HelloWorld_svnt.cpp:

          . The servant no longer needs to pass a pointer to itself to
            the CUTS_CCM_Servant_T base class.

Fri Jun  5 07:30:34 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * cuts/arch/ccm/CCM_ComponentServer_T.cpp:
        * cuts/arch/tcpip/TCPIP_Servant_VTable_T.h:
        * examples/arch/tcpip/HelloWorld/HelloWorld_Impl.mpc:
        * examples/arch/tcpip/HelloWorld/TCPIP_HelloWorld_svnt.h:

          . Fixed build errors on non-Windows systems.

Fri Jun  5 07:14:28 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/tcpip/Servant_Header_Context_Generator.cpp:

          . Bug fix where template paramters where missing leading
            and trailing space.

Fri Jun  5 07:10:46 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/tcpip/Project_Generator.cpp:

          . Bug fix where the excutor project was misspelled.

        * examples/arch/tcpip/HelloWorld/descriptors/run_test.pl:

          . Script for running the example.

Fri Jun  5 06:57:43 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * cuts/arch/ccm/CCM_ComponentServer_App_T.h:
        * cuts/arch/ccm/CCM_ComponentServer_App_T.inl:
        * cuts/arch/ccm/CCM_ComponentServer_App_T.cpp:
        * cuts/arch/ccm/CCM_ComponentServer_T.h:
        * cuts/arch/ccm/CUTS_CCM.mpc:
        * cuts/arch/tcpip/server/TCPIP_CCM_ComponentServer_App.h:
        * cuts/arch/tcpip/server/TCPIP_CCM_ComponentServer_App.cpp: